alignment fix

--- a/src/app/pages/hero/hero.scss
+++ b/src/app/pages/hero/hero.scss
@@ -504,6 +504,8 @@
   text-align: right;
   border-radius: 4px;
   padding: 4px;
+  margin-right: 10px;
+  margin-top: 10px;
 }
 
 .toggle-container button {
